--- a/index.html
+++ b/index.html
@@ -2283,7 +2283,7 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
                 </div>
                 <div class="modal-buttons">
                     <button class="btn-cancel" onclick="closeRenameCategoryModal()">Annuler</button>
-					<button class="btn-add" onclick="renameList()">Renommer</button>
+					<button class="btn-edit-list" onclick="showRenameListModal(${JSON.stringify(listName)})">✏️</button>
             </div>
         </div>
 
