--- a/index.html
+++ b/index.html
@@ -2312,7 +2312,7 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
                 </div>
                 <div class="modal-buttons">
                     <button class="btn-cancel" onclick="closeRenameListModal()">Annuler</button>
-					<button class="btn-edit-list" onclick="showRenameListModal(${JSON.stringify(listName)})">✏️</button>
+					<button class="btn-add" onclick="renameList()">Renommer</button>
                 </div>
             </div>
         </div>
@@ -3965,7 +3965,7 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
                     <div class="list-card-actions">
                         <button class="btn-list-action btn-study">📖 Réviser</button>
 						<button class="btn-list-action btn-review">🔄 À revoir</button>
-                        <button class="btn-list-action btn-manage" onclick="showManagePage('${escapeHtml(currentCategory)}','${escapeHtml(currentFolder)}','${escapeHtml(listName)}')">✏️ Gérer</button>
+						<button class="btn-edit-list" onclick="showRenameListModal(${JSON.stringify(listName)})">✏️</button>
                     </div>
                 `;
 
