--- a/index.html
+++ b/index.html
@@ -3869,65 +3869,69 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
         }
 
         function updateHomeStats() {
-            let totalCourses = 0;
-            let totalCards = 0;
-            Object.values(categories).forEach(cat => {
-                Object.values(cat).forEach(folder => {
-                    totalCourses++;
-                    Object.values(folder).forEach(lists => {
-                        totalCards += lists.length;
-                    });
-                });
-            });
-            document.getElementById('totalCourses').textContent = totalCourses;
-            document.getElementById('totalCards').textContent = totalCards;
-			
-            const list = document.getElementById('courseList');
-			list.innerHTML = '';
+    		let totalCourses = 0;
+    		let totalCards = 0;
+    		Object.values(categories).forEach(cat => {
+        		Object.values(cat).forEach(folder => {
+            		totalCourses++;
+            		Object.values(folder).forEach(lists => {
+                		if (Array.isArray(lists)) {
+                    		totalCards += lists.length;
+                		}
+            		});
+        		});
+    		});
+    		document.getElementById('totalCourses').textContent = totalCourses;
+    		document.getElementById('totalCards').textContent = totalCards;
 
-			const catNames = Object.keys(categories);
-			if (catNames.length === 0) {
-				list.innerHTML = '<p style="color:#999;text-align:center;padding:20px">Aucune catégorie créée.</p>';
-				return;
-			}
+    		const list = document.getElementById('courseList');
+    		list.innerHTML = '';
 
-			catNames.forEach(catName => {
-				const category = categories[catName] || {};
+    		const catNames = Object.keys(categories);
+    		if (catNames.length === 0) {
+        		list.innerHTML = '<p style="color:#999;text-align:center;padding:20px">Aucune catégorie créée.</p>';
+        		return;
+    		}
 
-				let courseCount = 0;
-				let listCount = 0;
-				let cardCount = 0;
+    		catNames.forEach(catName => {
+        		const category = categories[catName] || {};
 
-				Object.values(category).forEach(folder => {
-					courseCount++;
-					Object.values(folder).forEach(cards => {
-						listCount++;
-						cardCount += cards.length;
-					});
-				});
+        		let courseCount = 0;
+        		let listCount = 0;
+        		let cardCount = 0;
 
-				const div = document.createElement('div');
-				div.className = 'course-card';
+        		Object.values(category).forEach(folder => {
+            		courseCount++;
+            		Object.values(folder).forEach(cards => {
+                		if (Array.isArray(cards)) {
+                    		listCount++;
+                    		cardCount += cards.length;
+                		}
+            		});
+        		});
 
-				// Au clic : ouvre la catégorie dans la sidebar (sans choisir un cours précis)
-				div.onclick = () => {
-					showCategoryPage(catName);
-				};
+        		const div = document.createElement('div');
+        		div.className = 'course-card';
 
-				div.innerHTML =
-					'<div class="course-card-left">' +
-						'<div class="course-card-title">' + escapeHtml(catName) + '</div>' +
-						'<div class="course-card-info">' +
-						courseCount + ' cours • ' +
-						listCount + ' liste' + (listCount > 1 ? 's' : '') + ' • ' +
-						cardCount + ' carte' + (cardCount > 1 ? 's' : '') +
-					'</div>' +
-				'</div>' +
-				'<div class="course-card-arrow">→</div>';
+        // Au clic : ouvre la catégorie dans la sidebar (sans choisir un cours précis)
+        		div.onclick = () => {
+            		showCategoryPage(catName);
+        		};
 
-			list.appendChild(div);
-			});
-        }
+        		div.innerHTML =
+            		'<div class="course-card-left">' +
+            		'<div class="course-card-title">' + escapeHtml(catName) + '</div>' +
+            		'<div class="course-card-info">' +
+            		courseCount + ' cours • ' +
+            		listCount + ' liste' + (listCount > 1 ? 's' : '') + ' • ' +
+            		cardCount + ' carte' + (cardCount > 1 ? 's' : '') +
+            		'</div>' +
+            		'</div>' +
+            		'<div class="course-card-arrow">→</div>';
+
+        		list.appendChild(div);
+    		});
+		}
 
         function showListsPage(catName, folderName) {
             if (!categories[catName] || !categories[catName][folderName]) {
