--- a/index.html
+++ b/index.html
@@ -3706,6 +3706,10 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 
 // Déplacer la liste
 		function moveList() {
+			console.log('moveListTarget:', moveListTarget);
+    		console.log('currentCategory:', currentCategory);
+    		console.log('currentFolder:', currentFolder);
+    		console.log('Listes disponibles:', Object.keys(categories[currentCategory][currentFolder]));
     		const targetCategory = document.getElementById('moveToCategorySelect').value;
     		const targetFolder = document.getElementById('moveToFolderSelect').value;
     
