--- a/index.html
+++ b/index.html
@@ -4093,7 +4093,7 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
                         <button class="btn-list-action btn-study">📖 Réviser</button>
 						<button class="btn-list-action btn-review">🔄 À revoir</button>
                         <button class="btn-list-action btn-manage" onclick="showManagePage('${escapeHtml(currentCategory)}','${escapeHtml(currentFolder)}','${escapeHtml(listName)}')">✏️ Gérer</button>
-						<button onclick="showMoveListModal('nomDeListe')">📦 Déplacer</button>
+						<button onclick="showMoveListModal('${escapeHtml(listName)}')">📦 Déplacer</button>
                     </div>
                 `;
 
