--- a/index.html
+++ b/index.html
@@ -2670,6 +2670,9 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 
 		// 2) fallback si insertLineBreak ne marche pas
 				if (!ok) document.execCommand('insertHTML', false, '<br>');
+				if (e.key === '-') {
+					e.preventDefault();
+					document.execCommand('insertText', false, '• ');
 			}
 		}, true);
 
