--- a/index.html
+++ b/index.html
@@ -2577,10 +2577,10 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
             </div>
         </div>
     </div>
-		<button class="scroll-btn" onclick="goToFirstCard(false)" title="Aller en haut">⬆️</button>
-		<button id="btnGoLastCard" class="floating-last-card" onclick="goToLastCard(false)" title="Dernière fiche">
-		⬇️
-		</button>
+	<div class="scroll-buttons">
+    	<button onclick="goToFirstCard(false)">⬆️</button>
+    	<button onclick="goToLastCard(false)">⬇️</button>
+	</div>
     <!-- Notification -->
     <div id="notification" class="notification"></div>
 
