--- a/index.html
+++ b/index.html
@@ -1862,6 +1862,38 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 			border-color: rgba(255,209,102,0.85) !important;
 			background: rgba(255,209,102,0.2) !important;
 		}
+		.scroll-buttons {
+    		position: fixed;
+    		right: 20px;
+    		bottom: 20px;
+    		display: flex;
+    		flex-direction: column;
+    		gap: 10px;
+    		z-index: 1000;
+		}
+
+		.scroll-buttons button {
+   			width: 50px;
+    		height: 50px;
+    		border-radius: 50%;
+    		border: none;
+    		background: #007bff;
+    		color: white;
+    		font-size: 20px;
+    		cursor: pointer;
+    		box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    		transition: all 0.3s ease;
+		}
+
+		.scroll-buttons button:hover {
+    		background: #0056b3;
+    		transform: scale(1.1);
+   			box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+		}
+
+		.scroll-buttons button:active {
+    		transform: scale(0.95);
+		}
     </style>
 </head>
 <body onload="checkAuth()">
